--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".app.Views.NewsDetails"/>
+        <activity android:name=".app.Fragments.ArticlesInCategory"/>
     </application>
 
 </manifest>
